tests/this_annot_warning/this_annot_warning.exp
Error ----------------------------------------------------------------------------------------------------- test.js:3:11

Experimental `this` annotation. You may opt-in to using `this` annotations by putting `experimental.this_annot=true`
into the `[options]` section of your `.flowconfig`. [illegal-this-annot]

   3| type T = (this : number) => void;
                ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:5:15

Experimental `this` annotation. You may opt-in to using `this` annotations by putting `experimental.this_annot=true`
into the `[options]` section of your `.flowconfig`. [illegal-this-annot]

   5| function foo (this : number) : void {}
                    ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:7:22

Experimental `this` annotation. You may opt-in to using `this` annotations by putting `experimental.this_annot=true`
into the `[options]` section of your `.flowconfig`. [illegal-this-annot]

   7| declare function bar(this : number) : void;
                           ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:10:10

Experimental `this` annotation. You may opt-in to using `this` annotations by putting `experimental.this_annot=true`
into the `[options]` section of your `.flowconfig`. [illegal-this-annot]

   10|     foo (this : number) : void
                ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:14:10

Experimental `this` annotation. You may opt-in to using `this` annotations by putting `experimental.this_annot=true`
into the `[options]` section of your `.flowconfig`. [illegal-this-annot]

   14|     foo (this : number) : void {}
                ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:18:5

Cannot define method `foo` [1] on `A` because `A` [2] is incompatible with number [3]. [incompatible-type]

   test.js:18:5
   18|     foo(this : number) : void
           ^^^ [1]

References:
   test.js:17:15
   17| declare class A {
                     ^ [2]
   test.js:18:16
   18|     foo(this : number) : void
                      ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:18:9

Experimental `this` annotation. You may opt-in to using `this` annotations by putting `experimental.this_annot=true`
into the `[options]` section of your `.flowconfig`. [illegal-this-annot]

   18|     foo(this : number) : void
               ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:22:5

Cannot define method `foo` [1] on `B` because `B` [2] is incompatible with number [3]. [incompatible-type]

   test.js:22:5
   22|     foo(this : number) : void {}
           ^^^ [1]

References:
   test.js:21:7
   21| class B {
             ^ [2]
   test.js:22:16
   22|     foo(this : number) : void {}
                      ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:22:9

Experimental `this` annotation. You may opt-in to using `this` annotations by putting `experimental.this_annot=true`
into the `[options]` section of your `.flowconfig`. [illegal-this-annot]

   22|     foo(this : number) : void {}
               ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:26:5

Cannot define method `foo` [1] on `C` because `C` [2] is incompatible with number [3]. [incompatible-type]

   test.js:26:5
   26|     foo(this : number) : void
           ^^^ [1]

References:
   test.js:25:11
   25| interface C {
                 ^ [2]
   test.js:26:16
   26|     foo(this : number) : void
                      ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:26:9

Experimental `this` annotation. You may opt-in to using `this` annotations by putting `experimental.this_annot=true`
into the `[options]` section of your `.flowconfig`. [illegal-this-annot]

   26|     foo(this : number) : void
               ^^^^^^^^^^^^^



Found 11 errors
